--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,7 @@ trim_trailing_whitespace = false
 
 [*.yml]
 indent_size = 2
+
+[*.{js,html,css,blade.php,scss}]
+indent_style = space
+indent_size = 2
